@@ -1,5 +1,6 @@
 08/27/2015
   -Added ParsePacket to LGXTag which GetTagList uses
+  -Read now returns LGXTag type
 
 08/26/2015
   -Added LINT read support
